site/css/custom.css
/* ============================ */
/* HEADER */
/* ============================ */

@media (min-width: 992px) {
  .header-call-now {
    display: none;
  }
}

.rd-navbar-classic.rd-navbar-static .rd-navbar-brand img {
  max-width: 270px;
  max-height: 58px;
}

.rd-navbar-panel {
  display: flex;
  justify-content: space-evenly;
}

.rd-navbar-fixed .rd-navbar-panel {
  padding: 0 30px 0 0;
}

.rd-navbar-static .rd-nav-link:hover {
  color: #69c7ff;
}

.rd-navbar-static .rd-nav-item.active .rd-nav-link {
  color: #69c7ff;
}

@media (max-width: 400px) {
  .button-md {
    padding: 20px;
  }
}

/* ============================ */
/* INTRO */
/* ============================ */

.section-intro .company-logos {
  flex-wrap: wrap;
  padding: 15px 0;
}

.section-intro .company-logos img {
  padding: 15px;
  max-height: 70px;
}

@media (max-width: 400px) {
  .section-intro .company-logos img {
    padding: 15px;
    max-height: 60px;
  }

  h1,
  .heading-1 {
    font-size: 28px;
  }
}

.intro-box .subtitle {
  font-weight: 600;
}

/* ============================ */
/* SERVICE-CREATIVE */
/* ============================ */

.section-service-creative .icon-box-creative {
  padding: 50px 0;
}

.section-service-creative a,
a:focus,
a:active {
  margin-top: 10px;
  color: #fff;
}

/* ============================ */
/* TABS */
/* ============================ */

.section-tabs .cta-buttons a:first-of-type {
  margin-right: 10px;
}

.section-tabs .cta-buttons a:last-of-type {
  margin-top: 0;
}

/* ============================ */
/* ABOUT */
/* ============================ */

.section-about .box-about-creative p {
  margin: 10px 0;
}

.section-about .resp-container {
  position: relative;
  overflow: hidden;
  padding-top: 56.25%;
}

.section-about .resp-iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
}

.section-about .pre-title {
  font-weight: 600;
  margin: 10px 0;
}

.section-about .section-lg {
  padding: 0;
}

.section-about .about-cta-buttons {
  margin-bottom: 25px;
}

.section-about .about-cta-buttons a {
  margin-right: 10px;
}

@media (min-width: 1200px) {
  .bg-image-2 {
    background: url(../images/medicare-and-you.png) no-repeat left;
    background-size: cover;
    background-position: top;
  }
}

/* ============================ */
/* TESTIMONIALS */
/* ============================ */

.section-testimonials .review-box img {
  width: 150px;
}

/* ================================= */
/* LEARN EVERYTHING ABOUT MEDICARE */
/* ================================= */

.section-about-medicare {
  background: linear-gradient(
    90deg,
    rgba(10, 128, 198, 1) 0%,
    rgba(255, 252, 255, 1) 30%,
    rgba(10, 128, 198, 1) 100%
  );
}

.section-about-medicare .media-creative {
  margin: 0;
}

.section-about-medicare .resp-container {
  position: relative;
  overflow: hidden;
  padding-top: 56.25%;
}

.section-about-medicare .resp-iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
}

.section-about-medicare .list-marked li {
  color: #000;
}

.section-about-medicare .hide-btn-1 {
  margin-bottom: 25px;
}

.section-about-medicare .hide-btn-2 {
  margin-right: 5px;
}

@media (min-width: 992px) {
  .section-about-medicare .hide-btn-1 {
    display: none;
  }
}

@media (max-width: 992px) {
  .section-about-medicare .hide-btn-2 {
    display: none;
  }
}

/* ============================ */
/* COMPARE THE TOP PROVIDERS */
/* ============================ */

.section-compare .icon-box-modern img {
  height: 75px;
}

.section-compare .cta-buttons,
.section-compare .cta-buttons-2 {
  margin-top: 50px;
  text-align: center;
}

.section-compare .cta-buttons a,
.section-compare .cta-buttons-2 a {
  margin: 5px;
}

@media (min-width: 768px) {
  .section-compare .icon-box-modern .cta-buttons {
    display: none;
  }
}

@media (max-width: 768px) {
  .section-compare .cta-buttons-2 {
    display: none;
  }
}

/* ============================ */
/* COMPARE THE TOP PROVIDERS */
/* ============================ */

.footer-classic .social-list {
  justify-content: center;
}

.footer-classic .disclaimer,
.footer-classic .rights {
  text-align: center;
  font-size: 14px;
}

.footer-classic .disclaimer {
  margin: 10px;
  color: rgb(200, 200, 200);
}

.footer-classic .resp-container {
  position: relative;
  overflow: hidden;
  padding-top: 56.25%;
}

.footer-classic .resp-iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
}

.footer-classic .contact-list {
  margin: 5px 0;
}

.footer-classic a,
a:focus,
a:active {
  font-size: 14px;
  color: #fff;
}

